--- a/layout/includes/widget/card_recent_post.pug
+++ b/layout/includes/widget/card_recent_post.pug
@@ -9,12 +9,12 @@ if theme.aside.card_recent_post.enable
       - site.posts.sort(sort, -1).limit(postLimit).each(function(article){
         - let link = article.link || article.path
         - let title = article.title || _p('no_title')
-        - let post_cover = article.recent_post_cover || article.cover
+        - let post_cover = typeof article.recent_post_cover !== 'undefined' ? article.recent_post_cover : article.cover
         - let no_cover = post_cover === false || !theme.cover.aside_enable ? 'no-cover' : ''
         .aside-list-item(class=no_cover)
           if post_cover && theme.cover.aside_enable
             a.thumbnail(href=url_for(link) title=title)
-              if article.cover_type === 'img'
+              if article.cover_type === 'img' || typeof article.recent_post_cover !== 'undefined'
                 img(src=url_for(post_cover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title)
               else
                 div(style=`background: ${post_cover}`)
