Remove preload attribute for video tags

--- a/layout/includes/mixins/indexPostUI.pug
+++ b/layout/includes/mixins/indexPostUI.pug
@@ -19,7 +19,7 @@ mixin indexPostUI()
                 - const cover_video_parameters = article.cover_video_parameters || {}
                 - const post_video_cover = cover_video_parameters.post_video_cover
                 if article.cover_type === 'video'
-                  video.post-bg(autoplay=cover_video_parameters.autoplay loop=cover_video_parameters.loop muted playsinline preload=isEager ? 'metadata' : 'none' poster=post_video_cover ? url_for(post_video_cover) : undefined)
+                  video.post-bg(autoplay=cover_video_parameters.autoplay loop=cover_video_parameters.loop muted playsinline poster=post_video_cover ? url_for(post_video_cover) : undefined)
                     source(src=url_for(postCover) type=article.cover_mime)
                 else if article.cover_type === 'img'
                   img.post-bg(src=url_for(postCover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title loading=isEager ? 'eager' : undefined fetchpriority=isEager ? 'high' : undefined decoding=isEager ? undefined : 'async')
