--- a/layout/includes/mixins/article-sort.pug
+++ b/layout/includes/mixins/article-sort.pug
@@ -19,7 +19,7 @@ mixin articleSort(posts)
             - const cover_video_parameters = article.cover_video_parameters || {}
             - const post_video_cover = cover_video_parameters.post_video_cover
             if post_cover_type === 'video'
-              video(autoplay=cover_video_parameters.autoplay loop=cover_video_parameters.loop muted playsinline preload=isEager ? 'metadata' : 'none' poster=post_video_cover ? url_for(post_video_cover) : undefined)
+              video(autoplay=cover_video_parameters.autoplay loop=cover_video_parameters.loop muted playsinline poster=post_video_cover ? url_for(post_video_cover) : undefined)
                 source(src=url_for(post_cover) type=post_cover_mime)
             else if post_cover_type === 'img'
               img(src=url_for(post_cover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title loading=isEager ? 'eager' : undefined fetchpriority=isEager ? 'high' : undefined decoding=isEager ? undefined : 'async')
