--- a/layout/includes/mixins/article-sort.pug
+++ b/layout/includes/mixins/article-sort.pug
@@ -3,28 +3,32 @@ mixin articleSort(posts)
     - let year
     - posts.forEach((article, index) => {
       - const tempYear = date(article.date, 'YYYY')
-      - const postCover = article.article_sort_cover === false ? false : (article.article_sort_cover || article.cover)
-      - const noCoverClass = postCover === false || !theme.cover.archives_enable ? 'no-article-cover' : ''
+      - const hasArticleSortCover = article.article_sort_cover !== undefined
+      - const cover = hasArticleSortCover ? (article.article_sort_cover === false ? false : article.article_sort_cover) : article.cover
+      - const noCoverClass = cover === false || !theme.cover.archives_enable ? 'no-article-cover' : ''
       - const title = article.title || _p('no_title')
       if tempYear !== year
         - year = tempYear
         .article-sort-item.year= year
       .article-sort-item(class=noCoverClass)
-        if postCover && theme.cover.archives_enable
+        if cover && theme.cover.archives_enable
           a.article-sort-item-img(href=url_for(article.path) title=title)
             - const eagerCoversCount = theme.LCP_Optimization.enable ? (theme.LCP_Optimization.articles_sort_page ?? 0) : 0
             - const isEager = index < eagerCoversCount
-            - const postCoverType = article.article_sort_cover_type || article.cover_type
-            - const postCoverMime = article.article_sort_cover_mime || article.cover_mime
+            - const coverType = hasArticleSortCover ? article.article_sort_cover_type : article.cover_type
+            - const coverMime = hasArticleSortCover ? article.article_sort_cover_mime : article.cover_mime
+            - const articleSortVideoParameters = article.article_sort_video_parameters || {}
             - const coverVideoParameters = article.cover_video_parameters || {}
-            - const postVideoCover = coverVideoParameters.post_video_cover
-            if postCoverType === 'video'
-              video(autoplay=coverVideoParameters.autoplay loop=coverVideoParameters.loop muted playsinline poster=postVideoCover ? url_for(postVideoCover) : undefined)
-                source(src=url_for(postCover) type=postCoverMime)
-            else if postCoverType === 'img'
-              img(src=url_for(postCover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title loading=isEager ? 'eager' : undefined fetchpriority=isEager ? 'high' : undefined decoding=isEager ? undefined : 'async')
+            - const autoplay = hasArticleSortCover ? articleSortVideoParameters.autoplay : (articleSortVideoParameters.autoplay ?? coverVideoParameters.autoplay)
+            - const loop = hasArticleSortCover ? articleSortVideoParameters.loop : (articleSortVideoParameters.loop ?? coverVideoParameters.loop)
+            - const poster = hasArticleSortCover ? articleSortVideoParameters.article_sort_video_poster : (articleSortVideoParameters.article_sort_video_poster ?? coverVideoParameters.cover_video_poster)
+            if coverType === 'video'
+              video(autoplay=autoplay loop=loop muted playsinline poster=poster ? url_for(poster) : undefined)
+                source(src=url_for(cover) type=coverMime || undefined)
+            else if coverType === 'img'
+              img(src=url_for(cover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title loading=isEager ? 'eager' : undefined fetchpriority=isEager ? 'high' : undefined decoding=isEager ? undefined : 'async')
             else
-              div(style=`background: ${postCover}`)
+              div(style=`background: ${cover}`)
         .article-sort-item-info
           .article-sort-item-time
             i.far.fa-calendar-alt
