--- a/layout/includes/mixins/indexPostUI.pug
+++ b/layout/includes/mixins/indexPostUI.pug
@@ -14,8 +14,17 @@ mixin indexPostUI()
           if postCover && theme.cover.index_enable
             .post_cover(class=leftOrRight)
               a(href=url_for(link) title=title)
-                if article.cover_type === 'img'
-                  img.post-bg(src=url_for(postCover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title)
+                - const eagerCoversCount = theme.LCP_Optimization.enable ? (theme.LCP_Optimization.main_page ?? 3) : 0
+                - const isEager = index < eagerCoversCount
+                - const coverVideoParameters = article.cover_video_parameters || {}
+                - const postVideoCover = coverVideoParameters.cover_video_poster
+                if article.cover_type === 'video'
+                  if isEager && postVideoCover
+                    link(rel='preload' as='image' href=url_for(postVideoCover) fetchpriority='high')
+                  video.post-bg(autoplay=coverVideoParameters.autoplay loop=coverVideoParameters.loop muted playsinline poster=postVideoCover ? url_for(postVideoCover) : undefined)
+                    source(src=url_for(postCover) type=article.cover_mime || undefined)
+                else if article.cover_type === 'img'
+                  img.post-bg(src=url_for(postCover) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt=title loading=isEager ? 'eager' : undefined fetchpriority=isEager ? 'high' : undefined decoding=isEager ? undefined : 'async')
                 else
                   div.post-bg(style=`background: ${postCover}`)
           .recent-post-info(class=noCover)
