simplify poster yaml identifier *_video_poster -> poster + add img fallback for related posts
(cherry picked from commit f218816cfd4f619e613c053d596e603ecbd72355)

--- a/layout/includes/mixins/article-sort.pug
+++ b/layout/includes/mixins/article-sort.pug
@@ -21,7 +21,7 @@ mixin articleSort(posts)
             - const coverVideoParameters = article.cover_video_parameters || {}
             - const autoplay = hasArticleSortCover ? articleSortVideoParameters.autoplay : (articleSortVideoParameters.autoplay ?? coverVideoParameters.autoplay)
             - const loop = hasArticleSortCover ? articleSortVideoParameters.loop : (articleSortVideoParameters.loop ?? coverVideoParameters.loop)
-            - const poster = hasArticleSortCover ? articleSortVideoParameters.article_sort_video_poster : (articleSortVideoParameters.article_sort_video_poster ?? coverVideoParameters.cover_video_poster)
+            - const poster = hasArticleSortCover ? articleSortVideoParameters.poster : (articleSortVideoParameters.poster ?? coverVideoParameters.poster)
             if coverType === 'video'
               video(autoplay=autoplay loop=loop muted playsinline poster=poster ? url_for(poster) : undefined)
                 source(src=url_for(cover) type=coverMime || undefined)
