--- a/layout/includes/mixins/article-sort.pug
+++ b/layout/includes/mixins/article-sort.pug
@@ -12,16 +12,18 @@ mixin articleSort(posts)
         .article-sort-item.year= year
       .article-sort-item(class=noCoverClass)
         if cover && theme.cover.archives_enable
+          - const eagerCoversCount = theme.LCP_Optimization.enable ? (theme.LCP_Optimization.articles_sort_page ?? 0) : 0
+          - const isEager = index < eagerCoversCount
+          - const coverType = hasArticleSortCover ? article.article_sort_cover_type : article.cover_type
+          - const coverMime = hasArticleSortCover ? article.article_sort_cover_mime : article.cover_mime
+          - const articleSortVideoParameters = article.article_sort_video_parameters || {}
+          - const coverVideoParameters = article.cover_video_parameters || {}
+          - const autoplay = hasArticleSortCover ? articleSortVideoParameters.autoplay : (articleSortVideoParameters.autoplay ?? coverVideoParameters.autoplay)
+          - const loop = hasArticleSortCover ? articleSortVideoParameters.loop : (articleSortVideoParameters.loop ?? coverVideoParameters.loop)
+          - const poster = hasArticleSortCover ? articleSortVideoParameters.poster : (articleSortVideoParameters.poster ?? coverVideoParameters.poster)
+          if coverType === 'video' && isEager && poster
+            link(rel='preload' as='image' href=url_for(poster) fetchpriority='high')
           a.article-sort-item-img(href=url_for(article.path) title=title)
-            - const eagerCoversCount = theme.LCP_Optimization.enable ? (theme.LCP_Optimization.articles_sort_page ?? 0) : 0
-            - const isEager = index < eagerCoversCount
-            - const coverType = hasArticleSortCover ? article.article_sort_cover_type : article.cover_type
-            - const coverMime = hasArticleSortCover ? article.article_sort_cover_mime : article.cover_mime
-            - const articleSortVideoParameters = article.article_sort_video_parameters || {}
-            - const coverVideoParameters = article.cover_video_parameters || {}
-            - const autoplay = hasArticleSortCover ? articleSortVideoParameters.autoplay : (articleSortVideoParameters.autoplay ?? coverVideoParameters.autoplay)
-            - const loop = hasArticleSortCover ? articleSortVideoParameters.loop : (articleSortVideoParameters.loop ?? coverVideoParameters.loop)
-            - const poster = hasArticleSortCover ? articleSortVideoParameters.poster : (articleSortVideoParameters.poster ?? coverVideoParameters.poster)
             if coverType === 'video'
               video(autoplay=autoplay loop=loop muted playsinline poster=poster ? url_for(poster) : undefined)
                 source(src=url_for(cover) type=coverMime || undefined)
